SERVER-7347 Do not scale avgObjSize for mongos db.stats() to be consistent with mongod